--- a/stack.yml
+++ b/stack.yml
@@ -9,6 +9,7 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_PASSWORD: example
+      DATABASE_URL: postgres://postgres:example@localhost:5432/stocks
  
   adminer:
     image: adminer
