--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.51"
+anyhow = "1.0.45"
+tokio = { version = "1", features = ["full"] }
 actix-web = "3"
 diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
