--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+yew = "0.18"
