--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,8 @@ async-trait = "0.1.51"
 anyhow = "1.0.45"
 tokio = { version = "1", features = ["full"] }
 actix-web = "3"
-diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
+diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
