--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,11 @@ chrono = { version = "0.4", features = ["serde"], optional = true }
 diesel-derive-enum = { version = "0.4", features = ["postgres"], optional = true }
 yew = { version = "0.18" }
 actix-cors = { version = "0.5.4", optional = true }
+log = { version = "0.4.0", optional = true }
+env_logger = { version = "0.8.4", optional = true }
 
 [features]
-server_deps = ["async-trait", "anyhow", "tokio","actix-web","diesel", "dotenv", "serde", "serde_json", "chrono", "diesel-derive-enum", "actix-cors"]
+server_deps = ["async-trait", "anyhow", "tokio","actix-web","diesel", "dotenv", "serde", "serde_json", "chrono", "diesel-derive-enum", "actix-cors", "log", "env_logger"]
 
 #cargo build --bin client --target wasm32-unknown-unknown --features client_deps
-#cargo run --bin server --features server
+#cargo run --bin server --features server_deps
