--- a/diesel.toml
+++ b/diesel.toml
@@ -2,5 +2,5 @@
 # see diesel.rs/guides/configuring-diesel-cli
 
 [print_schema]
-file = "server/src/schema.rs"
+file = "src/bin/server_data/schema.rs"
 import_types = ["diesel::sql_types::*","crate::models::command::*"]
