--- a/src/bin/client_data/Cargo.toml
+++ b/src/bin/client_data/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 yew = "0.18"
+anyhow = { version = "1.0.45" }
 
 [features]
 server_deps = []
