--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-yew = "0.18"
-anyhow = { version = "1.0.45" }
+anyhow = "1.0.45"
 utils = { path = "../utils" }
+yew = "0.18"
 
 [[bin]]
 name = "client"
