--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-actix-web = "3"
+actix-web="3.2.0" 
+actix-web-actors="3"
+actix = "0.10.0"
 actix-cors = "0.5.4"
-actix-web-actors = "3"
 anyhow = "1.0.45"
 chrono = { version = "0.4", features = ["serde"] }
 async-trait = "0.1.51"
@@ -20,6 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 utils = { path = "../utils" }
+uuid = { version = "0.8", features = ["v4", "serde"] }
 
 [[bin]]
 name = "server"
