--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "rust-analyzer.cargo.allFeatures": true
+    "rust-analyzer.cargo.allFeatures": true,
+    "cSpell.words": [
+        "actix",
+        "Datelike",
+        "dotenv",
+        "chrono",
+        "Insertable",
+        "stonker",
+        "stonkers",
+        "websockets"
+    ]
 }
