--- a/client/trunk.toml
+++ b/client/trunk.toml
@@ -1,6 +1,7 @@
-[build]
-target = "index.html"
-
 [serve]
 # The port to serve on.
 port = 5000
+
+[tools]
+sass = "1.43.5"
+wasm_bindgen = "0.2.78"
