--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,8 +6,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 anyhow = "1.0.45"
+console_error_panic_hook = "0.1.6"
+wasm-bindgen = "0.2.78"
+yew = { version="0.18", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
+yew-router = { version = "0.15", features = ["web_sys"]}
+web-sys = "0.3"
+yew_styles = { version="0.11", features = ["navbar"]}
+stylist = "0.9"
 utils = { path = "../utils" }
-yew = "0.18"
 
 [[bin]]
 name = "client"
