--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2018"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+csv = "1.1"
 
+[[bin]]
+name = "news"
+path = "src/mod.rs"
