--- a/diesel.toml
+++ b/diesel.toml
@@ -3,4 +3,4 @@
 
 [print_schema]
 file = "server/src/server_data/schema.rs"
-import_types = ["diesel::sql_types::*","crate::models::command::*"]
+import_types = ["diesel::sql_types::*","crate::models::command::Commandtypesdb","crate::models::news::Effectdb"]
