--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.45"
 console_error_panic_hook = "0.1.6"
+chrono = { version = "0.4", features = ["serde"] }
 wasm-bindgen = "0.2.78"
 yew = { version="0.18", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
 yew-router = { version = "0.15", features = ["web_sys"]}
