--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "rust-analyzer.cargo.allFeatures": true,
     "cSpell.words": [
         "actix",
+        "datagen",
         "Datelike",
         "dotenv",
         "chrono",
