Added more generators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "dotenv",
         "chrono",
         "Insertable",
+        "repr",
         "stonker",
         "stonkers",
         "websockets"
