--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
         "stonkers",
         "TSQL",
         "websockets"
-    ]
+    ],
+    "files.associations": {
+        "*.tsql": "sql",
+    }
 }
