--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.45"
 console_error_panic_hook = "0.1.6"
-serde = "1.0"  # so far used only for ToHtml trait definition
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 stylist = "0.9"
 utils = { path = "../utils" }
 uuid = { version = "0.8.1", features = ["wasm-bindgen", "v4"] }
