Added graph at company page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "actix",
         "datagen",
         "Datelike",
+        "datetime",
         "dotenv",
         "chrono",
         "Insertable",
