--- a/stack.yml
+++ b/stack.yml
@@ -8,12 +8,32 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - stockdb:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: example
+    networks:
+      - stocknet
  
-  adminer:
-    image: adminer
+  backend:
+    image: pv281.azurecr.io/stocks-server:1.0.0
     restart: always
     ports:
-      - "8080:8080"
+      - "8081:8081"
+    environment:
+      - DATABASE_URL=postgres://pv281:rustrust1!@pv281-stocks.postgres.database.azure.com/postgres?sslmode=require
+    networks:
+      - stocknet
+
+  web:
+    image: pv281.azurecr.io/stocks-server-client:1.0.0
+    restart: always
+    ports:
+      - "5000:5000"
+
+
+
+networks:
+  stocknet:
+
+volumes:
+  stockdb:
